--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Titan+One&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -46,20 +47,23 @@ body {
     gap: 20px;
     justify-content: center;
     align-items: center;
-    & h1{
+
+    & h1 {
         font-weight: 700;
         font-family: "Titan One", sans-serif;
         color: rgb(26, 40, 137);
     }
 }
-#container{
+
+#container {
     width: 80%;
     height: 80%;
     background-color: rgb(212, 207, 255);
     border-radius: 13px;
     overflow: hidden;
 }
-#top{
+
+#top {
     padding: 15px;
     color: white;
     height: 70px;
@@ -69,12 +73,14 @@ body {
     align-items: center;
     gap: 20px;
 }
-.elem{
+
+.elem {
     align-items: center;
     display: flex;
     gap: 10px;
 }
-.ebox{
+
+.ebox {
     color: rgb(26, 40, 137);
     background-color: white;
     padding: 0px 10px;
@@ -86,16 +92,19 @@ body {
     font-weight: 700;
     font-size: 20px;
 }
-#bbox{
+
+#bbox {
     padding: 20px 10px;
-    height: calc(100% - 70px);
+    /* height: calc(100% - 70px); */
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 7px;
     flex-wrap: wrap;
 }
-.bub{
+
+.bub {
     height: 45px;
     width: 45px;
     font-weight: 700;
@@ -103,50 +112,97 @@ body {
     justify-content: center;
     align-items: center;
     color: white;
+    outline: none;
+    border: none;
     background-color: rgb(61, 75, 165);
     border-radius: 50px;
     transition: all 0.2s ease-in-out;
     cursor: pointer;
-    &:hover{
+
+    &:hover {
         background-color: rgb(26, 40, 137);
     }
 }
-#start{
+
+#start {
     height: calc(100% - 70px);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 20px;
-    & h2{
+
+    & h2 {
         color: rgb(26, 40, 137);
         font-size: 22px;
     }
 }
-#stop{
+
+#stop {
     display: none;
     height: calc(100% - 70px);
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 20px;
-    & h2{
+
+    & h2 {
         color: rgb(26, 40, 137);
         font-size: 22px;
     }
 }
-.begin{
+
+.begin {
     border: none;
     color: white;
     padding: 20px;
     border-radius: 10px;
     font-size: 14px;
-    font-weight:700 ;
+    font-weight: 700;
     background-color: rgb(61, 75, 165);
     transition: all 0.2s ease-in-out;
     cursor: pointer;
     outline: none;
-    &:hover{
+
+    &:hover {
         background-color: rgb(26, 40, 137);
+    }
+}
+
+@media (max-width:1200px) {
+    #bbox {
+        padding: 15px 10px;
+        gap: 8px;
+
+    }
+
+    #start {
+        padding: 0 40px;
+
+        & h2 {
+            color: rgb(26, 40, 137);
+            font-size: 16px;
+        }
+    }
+    .elem{
+        & h3{
+            font-size: 12px;
+        }
+    }
+    #highscore{
+        display: none;
+    }
+    .ebox {
+
+        padding: 0px 10px;
+        width: 25px;
+        font-size: 14px;
+    }
+}
+@media (max-width:370px) {
+    #main {
+        & h1 {
+            font-size: 26px;
+        }
     }
 }
